03-gitops/apps/02-media/multiscrobbler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiscrobbler
  namespace: media
spec:
  selector:
    app: multiscrobbler
  ports:
    - name: http
      port: 9078
      targetPort: 9078
