03-gitops/apps/02-media/multiscrobbler/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiscrobbler-tailscale
  namespace: media
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - multiscrobbler
  defaultBackend:
    service:
      name: multiscrobbler
      port:
        number: 9078
